--- a/frontend/react-app/src/components/panels/creation/creation.scss
+++ b/frontend/react-app/src/components/panels/creation/creation.scss
@@ -1,6 +1,6 @@
 @import '../../../ressources/stylesheet/variables.scss';
 
-.ObjectCreationScreen{
+#ObjectCreationScreen{
     grid-template-columns:$object-creation-columns-template;
     grid-template-rows: $object-creation-rows-template;
     grid-template-areas: $object-creation-area-template;
@@ -28,3 +28,10 @@
     grid-area: DescriptionLabel;
 }
 
+#RoomScreenCreation{
+    display: $room-creation-display;
+    grid-template-columns: $room-creation-columns-template;
+    grid-template-rows: $room-creation-rows-template;
+    grid-template-areas: $room-creation-area-template;
+
+}
