--- a/frontend/react-app/src/components/pages/page.scss
+++ b/frontend/react-app/src/components/pages/page.scss
@@ -1,5 +1,9 @@
 @import "../../ressources/stylesheet/variables.scss";
 
+form{
+  display: grid;
+}
+
 a:visited {
   text-decoration: $link-decoration-none;
 }
@@ -95,4 +99,28 @@ a {
 }
 
 
+.SelectionPage{
+  background-color: #F1F5F9;
+      min-height: 100vh;
+      white-space: pre-line;
+      display: grid;
+      grid-gap: 1vh;
+      grid-template-columns:2vw  23vw 73vw 2vw ;
+      grid-template-rows: 1.5vh 96vh 1.5vh;
+      grid-template-areas:
+          ". . . ."
+          ". SideMenu EditionScreen . "
+          ". . . .";
+      justify-content: center; 
+}
+
+.EditionScreen{
+  grid-area: EditionScreen;
+  border-radius: 5px;
+  max-height: 100%;
+  max-width: 100%;
+  background-color: #fff;
+  filter: drop-shadow(0 0.1rem 0.1rem #787777);
+  display: grid;
+}
 
