--- a/frontend/phaser/static/main.css
+++ b/frontend/phaser/static/main.css
@@ -14,3 +14,11 @@ canvas {
     filter: drop-shadow(0 0 0.75rem crimson);
     z-index: -2;
 }
+
+#game-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
